# epcis-cbv-with-owl2_rs

./: .gitignore  CLAUDE.md  COMPLETE_FRONTEND_IMPLEMENTATION.md  Cargo.toml  Dockerfile  FRONTEND_BACKEND_INTEGRATION_COMPLETE.md  PERFORMANCE_ANALYSIS.md  PROJECT_PLAN.md  README.md  TASK_BREAKDOWN.md  TECHNICAL_RESEARCH.md  VISUALIZATION_FIX_SUMMARY.md  benchmark_system.sh  debug_sparql.py  diagnostic_test.sh  docker-compose.yml  test_complete_system.sh  test_events.json  test_frontend_integration.sh  test_system.sh  test_visualization_fix.py
.claude/: CLAUDE.md
benches/: comprehensive_benchmarks.rs
config/: default.toml  development.toml  production.toml
data/: store_metadata.json  urn_epcis_ontology_ontologies_cbv.ttl.ttl  urn_epcis_ontology_ontologies_epcis2.ttl.ttl
docs/: API.md  DATA_GENERATION_PLAN.md  DEPLOYMENT.md  DEVELOPER.md  FRONTEND_DEVELOPMENT_PLAN.md  LEPTOS_INTEGRATION_PLAN.md  USER_GUIDE.md
examples/: basic_usage.sh  sample_epcis_event.json  sample_ontology.ttl  supply_chain_traceability.sh  test_reasoning.rs  test_sparql_endpoint.rs  test_sparql_queries.rs  test_turtle_parsing.rs  test_vocabulary_loading.rs
ontologies/: cbv.ttl  epcis2.ttl
samples/: README.md  epcis_data_large.ttl  epcis_data_medium.ttl  epcis_data_small.ttl
scripts/: backup.sh  deploy.sh  health-check.sh
src/: benchmarks.rs  config.rs  lib.rs  main.rs
static/: api_test.html  clean_test.html  debug_test.html  debug_test.js  final_test.html  index.html  main_js_test.html  quick_debug.html  simple_test.html  test_api.html  viz_test.html  working_version.html
test_db/: store_metadata.json  urn_epcis_ontology_ontologies_cbv.ttl.ttl  urn_epcis_ontology_ontologies_epcis2.ttl.ttl
test_load_db/: store_metadata.json  urn_epcis_ontology_ontologies_cbv.ttl.ttl  (+1 more)
(+36 files in other folders)
